Finished call tree "ajax edition" Added call tree sample data in JettyMain Fixed JS plugin loading on IE
git-svn-id: https://javasimon.googlecode.com/svn/trunk@604 b27f8733-aa53-0410-bf41-0b3b0dae0d5f

--- a/console/embed/src/main/resources/org/javasimon/console/resource/css/javasimon.css
+++ b/console/embed/src/main/resources/org/javasimon/console/resource/css/javasimon.css
@@ -211,6 +211,7 @@ table.sectionTable > tbody > tr > td > img.icon {
 table.sectionTable > tbody > tr > td.label {
 	width:180px;
 	font-weight: bold;
+	vertical-align: top;
 }
 div.bar {
 	background-color: silver;
@@ -229,4 +230,8 @@ div.detailViewSection > div.title {
 div.detailViewSection > table.formTable > tbody > tr > td.label {
 	width:200px;
 	font-weight: bold;
+	vertical-align: top;
+}
+table#callDataTreeTable > thead > tr > td {
+	height: 24px;
 }
